--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-swipeable": "^7.0.1",
